--- a/css/index/_chooseUs.scss
+++ b/css/index/_chooseUs.scss
@@ -23,6 +23,7 @@
             }
         }
         h3 {
+          padding: 0;
           @media (min-width: 1200px) {
             margin-bottom: 60px;
             text-align: left;
@@ -79,10 +80,16 @@
           grid-row: 2/3;
           grid-column: 2/3;
           text-align: center;
+          width: 80%;
+      margin: 0 auto;
+      padding-bottom: 20px;
           @media (min-width: 1200px) {
             // margin-left: -65px;
             margin-top: -2px;
             text-align: left;
+            margin:0;
+            width: 100%;
+            padding-bottom: 0;
           }
         }
       }
@@ -97,21 +104,20 @@
       .frame-grey {
         display: none;
 
-
         @media (min-width: 1200px) {
           display: block;
           background-color: #F0EFE9;
           width: 70%;
           position: absolute;
-          top: 40px;
-          right: -150px;
-          height: 370px;
+          top: 10px;
+          height: 420px;
+          right: -190px;
           z-index: -1;
         }
         @media (min-width: 1400px) {
-          top: 80px;
-          height: 390px;
-          right: -190px;
+          top: 70px;
+          height: 410px;
+          right: -229px;
         }
         }
     }
@@ -129,7 +135,7 @@
         @media (min-width: 1200px) {
           display: block;
           position: absolute;
-          right: -20px;
+          right: -60px;
           top: -100px;
           width: 50%;
           z-index: 2;
