--- a/css/index/_about.scss
+++ b/css/index/_about.scss
@@ -19,7 +19,8 @@
     @media (min-width: 1200px) {
       flex-direction: row;
       align-items: flex-start;
-      // justify-content: space-between;
+      padding-top: 30px;
+      margin-bottom: -70px;
       text-align: left;
       gap: 30px;
     }
@@ -29,69 +30,81 @@
       h2 {
         margin-bottom: 10px;
         @media (min-width: 1200px) {
-          margin-bottom: 50px;
+          margin-bottom: -15px;
         }
       }
       h3 {
-        margin-bottom: 40px;
-        margin-top: 30px;
+        // margin-bottom: 40px;
+        margin-bottom: 0;
+        // margin-top: 30px;
         @media (min-width: 1200px) {
-          margin-bottom: 45px;
+          margin-bottom: -30px;
         }
       }
 
       .p-last {
         margin-bottom: 50px;
         @media (min-width: 1200px) {
-          margin-bottom: 80px;
-          margin-top: 50px;
+          margin-bottom: 50px;
+          margin-top: 20px;
         }
       }
 
       p {
         padding: 13px;
+        text-align: center;
 
         @media (min-width: 992px) {
           padding: 20px;
+
         }
         @media (min-width: 1200px) {
-          padding: 10px;
+          padding: 10px 0 10px 0;
+          text-align: left;
           // line-height: 2rem;
         }
       }
-      .btn-black {
-        margin-right: 15px;
+      //   .btn-black {
+      //     margin-right: 15px;
 
-        i {
-          margin-left: 10px;
-        }
-        @media (min-width: 1200px) {
-          margin-right: 44px;
-        }
-      }
-      @media (min-width: 1200px) {
-        margin-left: 35px;
-      }
+      //     i {
+      //       margin-left: 10px;
+      //     }
+      //     @media (min-width: 1200px) {
+      //       margin-right: 44px;
+      //     }
+
+      //   @media (min-width: 992px) {
+      //     margin-right: 40px;
+      //   }
+      // }
 
       .flex-row {
+        display: flex;
+        text-align: center;
+        align-items: baseline;
+        justify-content: center;
 
-        @media (min-width: 992px) {
+        @media (min-width: 1200px) {
           display: flex;
-          text-align: center;
+          text-align: left;
           align-items: baseline;
-          justify-content: center;
+          justify-content: left;
         }
         .btn-top {
           display: flex;
           justify-content: center;
           margin-bottom: 20px;
           .btn-black {
-            margin-right: 0;
+            padding: 14px 14px;
+            margin-right: 10px;
             @media (min-width: 992px) {
-              margin-right: 15px;
+              margin-right: 20px;
+            }
+            @media (min-width: 1200px) {
+              margin-right: 44px;
             }
           }
-
         }
         .btn-video {
           display: flex;
@@ -103,6 +116,12 @@
             align-items: baseline;
             justify-content: center;
           }
+          p {
+            padding: 5px;
+            @media (min-width: 1200px) {
+              padding: 20px;
+            }
+          }
         }
       }
     }
@@ -112,7 +131,7 @@
       // flex: 1;
 
       img {
-        margin-top: 30px;
+        // margin-top: 30px;
         text-align: center;
         display: none;
 
@@ -134,6 +153,7 @@
         p {
           font-family: $font-family-DM;
           display: inline-block;
+          
           background-color: #beebff;
           width: 100%;
           padding: 10px;
