--- a/css/index/_features.scss
+++ b/css/index/_features.scss
@@ -31,13 +31,15 @@ border: none;
       flex-direction: column;
       margin: 0 auto;
       text-align: center;
-      justify-content: center;
       align-items: center;
+      // margin-bottom: 60px;
+      margin-block: 30px;
 
       @media (min-width: 1200px) {
         text-align: left;
         line-height: 1.2;
         align-items: flex-start;
+        margin-bottom: 0;
         margin-right: 60px;
       }
     }
@@ -46,27 +48,26 @@ border: none;
       color: $h2-text-color;
       font-size: 18px;
       font-family: $font-family-Inter;
-      margin-bottom: 30px;
-      margin-top: 30px;
-      z-index: 0;
+      // margin-bottom: 30px;
+      // margin-top: 30px;
     }
     h3 {
       color: $text-color-dark;
       font-family: $font-family-DM;
       font-size: 28px;
       font-weight: 700;
-      margin-bottom: 30px;
+      padding-block: 20px;
+      // margin-bottom: 30px;
+      margin-bottom: 0;
       z-index: 0;
 
       @media (min-width: 768px) {
         font-size: 45px;
       }
     }
-    a {
-      margin-right: 40px;
-      margin-left: 40px;
+    .btn-features {
       display: block;
-      margin-bottom: 20px;
+      margin: 15px 40px 20px 40px;
 
       @media (min-width: 768px) {
         display: inline-block; 
@@ -75,10 +76,10 @@ border: none;
       @media (min-width: 1200px) {
         display: block; // Gör länken till en blocknivå-element 
         width: 100%; // Ta upp hela bredden av föräldern 
-        margin: 0; // Ta bort marginaler 
-        padding-top: 20px;
-        padding-bottom: 20px;
+        // margin: 0; 
+        padding-block: 20px;
         text-align: center; 
+        margin: 15px 0px 0px 0px;
       }
     }
 // Placerar features-consulting i en grid i 2 col och 2 rader
