--- a/css/index/_services.scss
+++ b/css/index/_services.scss
@@ -1,8 +1,9 @@
 .services {
-  padding: 40px;
+  // padding: 40px;
   background-color: #f0efe9;
   position: relative;
   z-index: 0;
+  padding: 40px 50px 130px 30px;
 
   .background-lines-right {
     position: absolute;
@@ -16,24 +17,48 @@
     flex-direction: column;
     text-align: center;
 
+    @media (min-width: 1200px) {
+      margin: 0 auto;
+      padding-top: 40px;
+    }
+
     .headlines {
       @media (min-width: 1200px) {
         text-align: left;
+
+      }
+      h3{
+        margin-bottom: -10px;
+        padding-top: 0;
       }
     }
 
     .content {
       display: grid;
       grid-row-gap: 30px;
-      margin-bottom: 50px;
+      // margin-bottom: 50px;
+      @media (min-width: 768px) {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 50% 50%;
+        grid-column-gap: 30px;
+      }
+      @media (min-width: 1200px) {
+        grid-template-columns: 25% 25% 25% 25%;
+        text-align: left;
+        margin-right: 70px;
+      }
 
       .box {
         height: fit-content;
         background-color: #ffffff;
         padding: 30px;
         &:hover {
-          background-color: #F9D783;
+          background-color: #f9d783;
           color: $text-color-dark;
+        }
+        @media (min-width: 768px) {
+          display: grid;
         }
 
         span {
@@ -80,11 +105,6 @@
             // color: $text-color-dark;
             border: none;
           }
-         
-
-          i {
-            font-size: 22px;
-          }
           @media (min-width: 768px) {
             grid-row: 3/3;
             grid-column: 4/5;
@@ -93,30 +113,24 @@
             grid-column: 4/5;
             grid-row: 4/4;
           }
+
+          i {
+            font-size: 22px;
+          }
         }
-        @media (min-width: 768px) {
-          display: grid;
-        }
-      }
-      @media (min-width: 768px) {
-        display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 50% 50%;
-        grid-column-gap: 30px;
-      }
-      @media (min-width: 1200px) {
-        grid-template-columns: 25% 25% 25% 25%;
-        text-align: left;
-        margin-right: 70px;
       }
     }
-    @media (min-width: 1200px) {
-      margin: 0 auto;
+    .btn-transparent, .btn-center {
+      margin: 50px auto 0 auto;
+
+      @media (min-width: 768px) {
+        // margin: 10px auto 0 auto;
+      }
+
+      // margin: 0 auto;
+    
     }
   }
 }
 
-.btn-center {
-  margin-top: 30px;
-  margin: 0 auto;
-}
+
