--- a/css/index/_team.scss
+++ b/css/index/_team.scss
@@ -8,7 +8,7 @@
     .top-heading {
       display: flex;
       flex-direction: column;
-      margin-bottom: 40px;
+      margin-bottom: 50px;
       // text-align: center;
       @media (min-width: 992px) {
         text-align: left;
@@ -16,14 +16,16 @@
       }
 
       @media (min-width: 1200px) {
+        margin-bottom: 90px;
       }
 
       h2 {
-        margin-top: 120px;
+        margin-top: 70px;
         margin-bottom: 30px;
         // text-align: center;
         @media (min-width: 992px) {
           text-align: left;
+          margin-top: 120px;
         }
       }
       .top-row {
@@ -31,21 +33,28 @@
         flex-direction: column;
 
         @media (min-width: 992px) {
-          display: flex;
           flex-direction: row;
           justify-content: space-between;
           align-content: center;
+          align-items: baseline;
         }
       }
       h3 {
+        // margin-bottom: 0;
+        padding-bottom: 0;
+        padding-top: 0;
+        @media (min-width: 992px) {
+          margin-bottom: 0;
+        }
       }
       a {
-        // display: block;
+        display: block;
         justify-content: center;
         align-items: center;
-        margin: 0 auto;
-        margin-bottom: 60px;
-
+        align-self: center;
+        // margin: 0 auto;
+        // margin: 0 0 0 auto; 
+        // margin-bottom: 60px; 
         &:hover{
           transform: scale(1.1);
         }
@@ -126,7 +135,7 @@
     text-align: center;
 
     @media (min-width: 992px) {
-    padding-bottom: 120px;
+    // padding-bottom: 120px;
      }
 
   .dot {
