--- a/css/style.scss
+++ b/css/style.scss
@@ -81,6 +81,11 @@ h4 {
   align-items: center;
 }
 
+.link-no-style {
+  text-decoration: none;
+  color: $text-color-dark;
+}
+
 .btn-yellow {
   background-color: $btn-yellow;
   color: $text-color-dark;
@@ -95,7 +100,7 @@ h4 {
     margin-left: 7px;
     font-size: 0.9em;
   }
-    // vid hover, ändra bakgrundsfärg + textfärg samt öka padding
+    //vid hover, ändra bakgrundsfärg + textfärg samt öka padding
   &:hover {
     background-color: $btn-black;
     transition: 0.5s;
@@ -118,7 +123,7 @@ h4 {
     margin-left: 7px;
     font-size: 0.9em;
   }
-  // vid hover, ändra bakgrundsfärg + textfärg samt öka padding
+  //vid hover, ändra bakgrundsfärg + textfärg samt öka padding
   &:hover {
     background-color: $btn-black;
     transition: 0.5s;
@@ -132,7 +137,7 @@ h4 {
   color: #f0efe9;
   border-color: 1px solid $btn-yellow;
   border-radius: 25px;
-  padding: 12px 25px;
+  padding: 14px 14px;
   text-decoration: none;
   font-weight: 600;
   font-size: 16px;
@@ -140,12 +145,15 @@ h4 {
     margin-left: 7px;
     font-size: 0.9em;
   }
-  // Vid hover, ändra bakgrundsfärg + textfärg, samt öka padding
+  //Vid hover, ändra bakgrundsfärg + textfärg, samt öka padding
   &:hover {
     background-color: $btn-yellow;
     transition: 0.5s;
     transform: scale(1.1);
     color: $text-color-dark;
+  }
+  @media (min-width: 768px) {
+  padding: 12px 25px;
   }
 }
 
