--- a/css/index/_case.scss
+++ b/css/index/_case.scss
@@ -13,6 +13,7 @@
         margin-top: 20px;
         @media (min-width: 768px) {
           margin-bottom: 17px;
+          margin-top: 120px;
         }
       }
       h3 {
