--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ header {
   margin-left: auto;
   margin-right: auto;
   padding: 15px;
+  position: relative;
+  z-index: 2;
 }
 header .container {
   display: flex;
@@ -70,6 +72,13 @@ header .container .menu .top-menu .contact-information .content-box {
   font-family: "Inter", sans-serif;
   font-size: 15px;
   font-weight: 300;
+}
+header .container .menu .top-menu .contact-information .content-box a {
+  text-decoration: none;
+  color: #191919;
+}
+header .container .menu .top-menu .contact-information .content-box a:hover {
+  text-decoration: underline;
 }
 header .container .menu .top-menu .contact-information .content-box i {
   margin-right: 5px;
@@ -821,6 +830,7 @@ h3 {
 @media (min-width: 768px) {
   .case .container .headlines h2 {
     margin-bottom: 17px;
+    margin-top: 120px;
   }
 }
 .case .container .headlines h3 {
@@ -1457,18 +1467,19 @@ h3 {
   background-color: #191919;
 }
 
-.contacts {
-  padding-block: 130px;
-}
-
 .showcase-contacts {
   position: relative;
-  background-color: #F0EFE9;
-  z-index: -1;
+  height: 300px;
+  background-color: #f0efe9;
+  z-index: 1;
 }
 .showcase-contacts .backround-lines {
   position: absolute;
-  z-index: 1;
+  position: absolute;
+  bottom: -21px;
+  z-index: -1;
+  width: 100%;
+  left: -190px;
 }
 .showcase-contacts .container-contacts .content {
   text-align: center;
@@ -1477,6 +1488,7 @@ h3 {
   align-items: center;
   align-content: center;
   justify-content: center;
+  padding-top: 40px;
 }
 .showcase-contacts .container-contacts .content .small-h1 {
   font-family: "Inter", sans-serif;
@@ -1491,15 +1503,21 @@ h3 {
   color: #191919;
 }
 
+.contact-information {
+  z-index: 1;
+}
 .contact-information .container {
   display: flex;
   flex-direction: column;
   gap: 10px;
   margin-block: 100px;
+  align-items: center;
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   .contact-information .container {
     flex-direction: row;
+    justify-content: center;
+    gap: 20px;
   }
 }
 .contact-information .container a {
@@ -1510,8 +1528,14 @@ h3 {
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: auto 1fr;
-  gap: 15px;
-  padding: 30px;
+  height: 200px;
+  width: 280px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  padding: 40px;
+  z-index: 1;
+  position: relative;
+  margin: 0 auto;
 }
 .contact-information .container a .item:hover {
   background-color: #F9D783;
@@ -1519,18 +1543,50 @@ h3 {
 }
 .contact-information .container a .item:hover h3 {
   text-decoration: underline;
+  align-self: end;
 }
 .contact-information .container a .item:hover p {
   color: #191919;
 }
 .contact-information .container a .item:hover i {
   transform: scale(1.1);
+  align-self: flex-start;
+  transition: 0.5s;
+}
+@media (min-width: 320px) {
+  .contact-information .container a .item {
+    -moz-column-gap: 40px;
+         column-gap: 40px;
+    width: 350px;
+  }
+}
+@media (min-width: 768px) {
+  .contact-information .container a .item {
+    width: 420px;
+  }
+  .contact-information .container a .item:hover {
+    background-color: #F9D783;
+    transition: 0.5s;
+  }
+  .contact-information .container a .item:hover h3 {
+    text-decoration: underline;
+    align-self: end;
+  }
+  .contact-information .container a .item:hover p {
+    color: #191919;
+  }
+  .contact-information .container a .item:hover i {
+    transform: scale(1.1);
+    align-self: flex-start;
+    transition: 0.5s;
+  }
 }
 @media (min-width: 992px) {
   .contact-information .container a .item {
     grid-template-columns: auto 1fr;
     grid-template-rows: auto 1fr;
     gap: 15px;
+    justify-items: left;
   }
 }
 .contact-information .container a .item i {
@@ -1542,8 +1598,17 @@ h3 {
   border-radius: 25px;
   height: 50px;
   width: 50px;
+  align-self: center;
   grid-column: 1/2;
-  grid-row: 1/3;
+  grid-row: 1/2;
+  z-index: 1;
+}
+@media (min-width: 992px) {
+  .contact-information .container a .item i {
+    grid-column: 1/2;
+    grid-row: 1/3;
+    align-self: center;
+  }
 }
 .contact-information .container a .item h3 {
   font-family: "DM Sans", sans-serif;
@@ -1552,6 +1617,14 @@ h3 {
   grid-column: 2/3;
   grid-row: 1/2;
   margin-bottom: 0;
+  padding: 0;
+  z-index: 1;
+}
+@media (min-width: 992px) {
+  .contact-information .container a .item h3 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
 }
 .contact-information .container a .item p {
   font-family: "Inter", sans-serif;
@@ -1561,6 +1634,13 @@ h3 {
   grid-column: 2/3;
   grid-row: 2/3;
 }
+@media (min-width: 992px) {
+  .contact-information .container a .item p {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    align-self: flex-end;
+  }
+}
 
 .contact-form {
   background-color: #f0efe9;
@@ -1569,7 +1649,8 @@ h3 {
   flex-direction: column;
   align-items: center;
   padding-top: 140px;
-  padding-bottom: 100px;
+  padding-bottom: 70px;
+  margin-bottom: 120px;
 }
 .contact-form h2 {
   font-size: 45px;
