--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,67 +1,57 @@
 // HEADER
 header {
   display: flex;
-  background-color: #F0EFE9;
+  background-color: #f0efe9;
   /* placera headern i mitten */
   margin-left: auto;
   margin-right: auto;
   padding: 15px;
   position: relative;
   z-index: 2;
-// Placerar hela innehållet i headern i en flex
+  // Placerar hela innehållet i headern i en flex
   .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 78px;
-
     @media (min-width: 2500px) {
       max-width: 2048px;
     }
-
     .logotype {
       align-self: center;
     }
- 
     .menu-bars {
       font-size: 25px;
       border: none;
       background-color: transparent;
-
       @media (min-width: 992px) {
         display: none;
       }
     }
-
     .menu {
       display: none;
       flex: 1;
-
       @media (min-width: 992px) {
         display: block;
       }
-// Placerar top-menyn i en flex
+      // Placerar top-menyn i en flex
       .top-menu {
         display: flex;
         justify-content: flex-end;
         border-bottom: 1px solid #dad9d3;
         align-items: center;
-
         @media (min-width: 1200px) {
           justify-content: space-between;
         }
-
-// Tar bort kontakt-information upp till 1200px skärmstorlek
+        // Tar bort kontakt-information upp till 1200px skärmstorlek
         .contact-information {
           display: none;
           padding-block: 10px;
           width: 100%;
-
-// Visar kontaktinformation
+          // Visar kontaktinformation
           @media (min-width: 1200px) {
             display: flex;
           }
-
           .content-box {
             margin-right: 30px;
             padding-right: 25px;
@@ -69,48 +59,42 @@ header {
             font-family: $font-family-Inter;
             font-size: 15px;
             font-weight: 300;
-            a{
+            a {
               text-decoration: none;
               color: $text-color-dark;
-
-              &:hover{
+              &:hover {
                 text-decoration: underline;
               }
             }
-
             i {
               margin-right: 5px;
               font-size: 1.2em;
               color: #66666666;
             }
-
             &.last {
               border: none;
             }
           }
         }
-
         .social-media {
           // Tar bort understreck för länkar
-         a {
-          text-decoration: none;
-         }
+          a {
+            text-decoration: none;
+          }
           @media (min-width: 1200px) {
             display: flex;
           }
-
           i {
             color: #191919;
             font-size: 1.3rem;
             margin-left: 10px;
-
             &:hover {
               color: #666666;
             }
           }
         }
       }
-// placerar main-menyn i en flex och centrerar
+      // placerar main-menyn i en flex och centrerar
       .main-menu {
         display: flex;
         justify-content: space-between;
@@ -123,11 +107,10 @@ header {
             color: $text-color-dark;
             margin-right: 35px;
             position: relative;
-// vid aktiv länk, öka fontweight
+            // vid aktiv länk, öka fontweight
             &.active {
               font-weight: 600;
             }
-
             &.active::after,
             &:hover::after {
               content: "";
@@ -143,7 +126,6 @@ header {
           }
         }
       }
-  
     }
     .btn-login {
       padding-top: 12px;
