--- a/css/index/_case.scss
+++ b/css/index/_case.scss
@@ -3,7 +3,6 @@
     .headlines {
       margin-top: 90px;
       text-align: center;
-
       @media (min-width: 1200px) {
         margin: 0;
         padding: 0;
@@ -17,13 +16,8 @@
         }
       }
       h3 {
-        // margin-top: 40px;
         margin-bottom: 0;
         padding-bottom: 0;
-
-        @media (min-width: 768px) {
-          // margin-bottom: 20px;
-        }
         @media (min-width: 1200px) {
           margin: 0 0 30px 0;
           padding: 0;
@@ -34,7 +28,6 @@
       display: grid;
       grid-template-columns: 1fr;
       text-align: center;
-
       @media (min-width: 768px) {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -51,7 +44,6 @@
         @media (min-width: 1200px) {
           margin-top: 40px;
         }
-
         img {
           width: 100%;
           height: auto;
@@ -59,7 +51,6 @@
         @media (min-width: 1200px) {
           border-bottom: none;
         }
-
         .btn-transparent {
           padding: 10px;
           margin-bottom: 00%;
@@ -70,7 +61,6 @@
         text-align: center;
         padding-bottom: 16px;
         padding-top: 35px;
-
         @media (min-width: 768px) {
           text-align: left;
           margin-top: 70px;
@@ -95,7 +85,6 @@
         font-size: 14px;
         border: none;
         margin-bottom: 20px;
-
         @media (min-width: 1200px) {
           margin-bottom: 10px;
         }
@@ -119,6 +108,5 @@
   }
 }
 .case > .container > .content-grid .box:hover {
-  text-decoration: underline;
-  // text-transform: uppercase;
+  text-transform: uppercase;
 }
