--- a/css/index/_services.scss
+++ b/css/index/_services.scss
@@ -1,42 +1,34 @@
 .services {
-  // padding: 40px;
   background-color: #f0efe9;
   position: relative;
   z-index: 0;
   padding: 40px 50px 130px 30px;
-
   .background-lines-right {
     position: absolute;
     bottom: 0px;
     right: 0px;
     z-index: -1;
   }
-
   .container {
     display: flex;
     flex-direction: column;
     text-align: center;
-
     @media (min-width: 1200px) {
       margin: 0 auto;
       padding-top: 40px;
     }
-
     .headlines {
       @media (min-width: 1200px) {
         text-align: left;
-
       }
       h3{
         margin-bottom: -10px;
         padding-top: 0;
       }
     }
-
     .content {
       display: grid;
       grid-row-gap: 30px;
-      // margin-bottom: 50px;
       @media (min-width: 768px) {
         display: grid;
         grid-template-columns: 50% 50%;
@@ -48,26 +40,22 @@
         text-align: left;
         margin-right: 70px;
       }
-
       .box {
         height: fit-content;
         background-color: #ffffff;
         padding: 30px;
         &:hover {
           background-color: #f9d783;
-          color: $text-color-dark;
         }
         @media (min-width: 768px) {
           display: grid;
         }
-
         span {
           border-top: 1px solid black;
           width: 40px;
           grid-row: 1/3;
           grid-column: 1/3;
           margin-top: 20px;
-
           @media (min-width: 768px) {
             margin-top: 20px;
           }
@@ -101,8 +89,8 @@
           justify-content: center;
           padding: 26px 28px;
           &:hover {
-            // background-color: #ffffff;
-            // color: $text-color-dark;
+            background-color: #ffffff;
+            color: $text-color-dark;
             border: none;
           }
           @media (min-width: 768px) {
@@ -113,7 +101,6 @@
             grid-column: 4/5;
             grid-row: 4/4;
           }
-
           i {
             font-size: 22px;
           }
@@ -122,13 +109,6 @@
     }
     .btn-transparent, .btn-center {
       margin: 50px auto 0 auto;
-
-      @media (min-width: 768px) {
-        // margin: 10px auto 0 auto;
-      }
-
-      // margin: 0 auto;
-    
     }
   }
 }
