--- a/css/style.scss
+++ b/css/style.scss
@@ -14,13 +14,13 @@
 @import "./index/testimonial";
 @import "./index/articles-news";
 @import "./contacts/contacts";
+@import "./news/news";
 @import "./footer";
 
 
 * {
   box-sizing: border-box; // tar med border i beräkning vid sättning av storlek (borderna tar alltså inte upp 2 px extra p detta sätt)
 }
-
 html,
 body {
   color: #191919;
@@ -30,33 +30,20 @@ body {
   margin: 0;
   text-transform: capitalize;
 }
-
-
-.headlines{
-  h2{
+.headlines {
+  h2 {
     color: #f94d1c;
     font-size: 18px;
     font-family: $font-family-Inter;
     margin-bottom: 30px;
     margin-top: 30px;
   }
-
 }
-
-// .heading-red {
-//   color: #f94d1c;
-//   font-size: 18px;
-//   font-family: $font-family-Inter;
-//   margin-bottom: 30px;
-//   margin-top: 30px;
-// }
-
 h2 {
   color: $h2-text-color;
   font-size: 18px;
   font-family: $font-family-Inter;
 }
-
 h3 {
   color: $text-color-dark;
   font-family: $font-family-DM;
@@ -68,24 +55,20 @@ h3 {
     font-size: 45px;
   }
 }
-
 h4 {
   font-family: $font-family-DM;
   font-weight: 700;
   font-size: 22px;
 }
-
-.center-content{
+.center-content {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .link-no-style {
   text-decoration: none;
   color: $text-color-dark;
 }
-
 .btn-yellow {
   background-color: $btn-yellow;
   color: $text-color-dark;
@@ -95,30 +78,6 @@ h4 {
   text-decoration: none;
   font-weight: 600;
   font-size: 16px;
-
-  i {
-    margin-left: 7px;
-    font-size: 0.9em;
-  }
-    //vid hover, ändra bakgrundsfärg + textfärg samt öka padding
-  &:hover {
-    background-color: $btn-black;
-    transition: 0.5s;
-    transform: scale(.8);
-    color: $text-color-light;
-  }
-}
-
-.btn-transparent {
-  background-color: $btn-transparent;
-  color: $text-color-dark;
-  border: 1px solid $btn-black;
-  border-radius: 25px;
-  padding: 12px 25px;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 16px;
-
   i {
     margin-left: 7px;
     font-size: 0.9em;
@@ -131,7 +90,27 @@ h4 {
     color: $text-color-light;
   }
 }
-
+.btn-transparent {
+  background-color: $btn-transparent;
+  color: $text-color-dark;
+  border: 1px solid $btn-black;
+  border-radius: 25px;
+  padding: 12px 25px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+  i {
+    margin-left: 7px;
+    font-size: 0.9em;
+  }
+  //vid hover, ändra bakgrundsfärg + textfärg samt öka padding
+  &:hover {
+    background-color: $btn-black;
+    transition: 0.5s;
+    transform: scale(1.1);
+    color: $text-color-light;
+  }
+}
 .btn-black {
   background-color: $btn-black;
   color: #f0efe9;
@@ -153,10 +132,9 @@ h4 {
     color: $text-color-dark;
   }
   @media (min-width: 768px) {
-  padding: 12px 25px;
+    padding: 12px 25px;
   }
 }
-
 .btn-circle {
   background-color: $btn-transparent;
   color: $text-color-dark;
@@ -168,11 +146,28 @@ h4 {
   font-size: 16px;
   width: 50px;
   height: 50px;
-    // Vid hover, ändra bakgrundsfärg + textfärg, samt öka padding
-    &:hover {
+  // Vid hover, ändra bakgrundsfärg + textfärg, samt öka padding
+  &:hover {
     background-color: $btn-black;
     transition: 0.5s;
     transform: scale(1.1);
     color: $text-color-light;
   }
 }
+/*Style for next and previous-buttons*/
+.next-page{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* justify-content: space-around; */
+  gap: 10px;
+   .previous{
+     list-style-type: none;
+   }
+   .page-number{
+    color:aqua;
+   }
+   .next{
+     color: rgb(217, 17, 17);
+   }
+ }
